portainer/portainer-prod-1/argo/middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: portainer-prod-1-middleware-cors
  namespace: portainer
spec:
  headers:
    accessControlAllowMethods:
      - "*"
    accessControlAllowOriginList:
      - "*"
    accessControlAllowHeaders:
      - "x-api-key"
    accessControlMaxAge: 100
    addVaryHeader: true
